--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <!-- Brand/logo -->
 
         <div class="container-fluid">
-          <!-- Links -->
-          <a class="navbar-brand">Logo</a>
+          <!-- Links-->
+          <img src="copercore_ai_logo.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+          <a class="navbar-brand"></a>
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" href="index.html">Upload file</a>
