--- a/map.html
+++ b/map.html
@@ -21,7 +21,7 @@
 
         <div class="container-fluid">
           <!-- Links -->
-          <a class="navbar-brand">Logo</a>
+          <img src="copercore_ai_logo.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="index.html">Upload file</a>
@@ -58,7 +58,7 @@
 
 
           
-            <!-- add interactive map -->
+            <!-- add interactive map with pinning capabilities-->
             <div id="map" style="width: 100%; height: 500px;"></div>
             <script>
                 var map = L.map('map').setView([-20.505, 142.9], 13);
@@ -71,6 +71,7 @@
                     alert("You clicked the map at " + e.latlng.toString());
                 }
                 var marker = L.marker([-20.505, 142.9]).addTo(map);
+
             </script>
 
     </div>
