--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
 
         <div class="container-fluid">
           <!-- Links -->
-          <a class="navbar-brand">Logo</a>
+          <img src="copercore_ai_logo.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="index.html">Upload file</a>
